--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -4,7 +4,7 @@
 		<ul id="navToggle" class="burger slide close">    <!--	Add "slideRight" class to items that move right when viewing Nav Drawer  -->
 			<li></li><li></li><li></li>
 		</ul>
-		<img src="./assets/img/logo.png" alt="">
+		<img src="assets/img/logo.png" alt="">
 	</header>
 
 	<nav class="slide">
