--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -12,14 +12,15 @@
       </div>
     </div>
     
-    <div *ngIf="users.lentgh === 0"><h1>Buscando data {{users.lentgh}}</h1></div>
-    <table class="table  table-hover" *ngIf="users.lentgh != 0">
+    <div *ngIf="users.length === 0"><h1>Buscando data {{users.length}}</h1></div>
+    <table class="table  table-hover" *ngIf="users.length != 0">
       <thead class="thead-dark">
         <tr>
           <th scope="col">#</th>
           <th scope="col">Nombre</th>
           <th scope="col">Email</th>
           <th scope="col">Tipo</th>
+          <th scope="col">Activo</th>
           <th scope="col">Opciones</th>
         </tr>
       </thead>
@@ -29,9 +30,14 @@
           <td>{{user.name}}</td>
           <td>{{user.email}}</td>
           <td>{{parseType(user.type)}}</td>
+          <td *ngIf="user.actived == 1">Si</td>
+          <td *ngIf="user.actived == 0">No</td>
           <td>
-            <button (click)="createForma(i, 'update')" type="button" class="btn" data-toggle="modal" data-target="#exampleModal">
+            <button (click)="createForma(i, 'update')" title="Modificar" type="button" class="btn" data-toggle="modal" data-target="#exampleModal">
               <i class="fas fa-pencil-alt"></i>
+            </button>
+            <button (click)="createForma(i, 'key')" title="Cambiar Contraseña" type="button" class="btn" data-toggle="modal" data-target="#exampleModal">
+              <i class="fas fa-key"></i>
             </button>
           </td>
         </tr>
@@ -44,6 +50,7 @@
       <div class="modal-content">
         <div class="modal-header text-center">
           <h4 class="modal-title text-center" id="exampleModalLabel" *ngIf="action==='update'">Modificar Usuario</h4>
+          <h4 class="modal-title text-center" id="exampleModalLabel" *ngIf="action==='key'">Modificar Usuario - Cambio de contraseña</h4>
           <h4 class="modal-title text-center" id="exampleModalLabel" *ngIf="action==='create'">Nuevo Usuario</h4>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
@@ -52,37 +59,48 @@
         <div class="modal-body">
           <form [formGroup]='forma'>
             <div class="row">
-              <div class="col-4">
+              <div class="col-4" *ngIf="action==='create' || action==='update'">
                 <h1>Nombre  </h1>
               </div>
-              <div class="col-6">
+              <div class="col-6" *ngIf="action==='create' || action==='update'">
                 <input type="text" formControlName="name">
               </div>
-              <div class="col-4">
+              <div class="col-4" *ngIf="action==='create' || action==='update'">
                 <h1>Email</h1>
               </div>
-              <div class="col-6">
+              <div class="col-6" *ngIf="action==='create'">
                 <input type="text" formControlName="email">
               </div>
-              <div class="col-4" *ngIf="action==='create'">
+              <div class="col-6" *ngIf="action==='update'">
+                <input type="text" [value]="forma.value.email" disabled>
+              </div>
+              <div class="col-4" *ngIf="action==='create' || action==='key'">
                 <h1>Password</h1>
               </div>
-              <div class="col-6" *ngIf="action==='create'">
+              <div class="col-6" *ngIf="action==='create' || action==='key'">
                 <input type="password" formControlName="password">
               </div>
-              <div class="col-4">
+              <div class="col-4" *ngIf="action==='create' || action==='update'">
                 <h1>Tipo</h1>
               </div>
-              <div class="col-6">
+              <div class="col-6" *ngIf="action==='create' || action==='update'">
                 <select formControlName="type" style="width:100%;">
                   <option *ngFor="let type of types" [value]="type.value">{{type.text}}</option>
                 </select>
               </div>
-              <div class="col-4">
+              <div class="col-4" *ngIf="action==='create' || action==='update'">
                 <h1>Descripción</h1>
               </div>
-               <div class="col-6">
+               <div class="col-6" *ngIf="action==='create' || action==='update'">
                 {{descriptionPermit()}}
+              </div>
+              <div class="col-4" *ngIf="action==='update'">
+                <h1>Activo</h1>
+              </div>
+              <div class="col-6" *ngIf="action==='update'">
+                <select formControlName="actived" style="width:100%;">
+                  <option *ngFor="let option of actived" [value]="option.value">{{option.text}}</option>
+                </select>
               </div>
             </div>
           </form>
@@ -92,10 +110,14 @@
           <div *ngIf="errorInit" class="alert alert-danger fade fastAnimated" role="alert" style="margin-top:10px">
               Error en la operacion.
           </div>
+          <div *ngIf="exist" class="alert alert-info fade fastAnimated" role="alert" style="margin-top:10px">
+              El correo ya se encuentra registrado en el sistema, por favor introduzca otra dirección de correo.
+          </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
           <button type="button" class="btn btn-primary" *ngIf="forma.valid && action === 'update'" (click)="update()">Guardar Cambios</button>
+          <button type="button" class="btn btn-primary" *ngIf="forma.valid && action === 'key'" (click)="updatePassword()">Modificar Contraseña</button>
           <button type="button" class="btn btn-primary" *ngIf="forma.valid && action === 'create'" (click)="create()">Guardar</button>
         </div>
       </div>
